# WAUTH

./: .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  STATUS.md
demo/: wauth-demo-engineering-backlog-v0.1.md
docs/: change-proposal-v0.5.1.md  lovable-prompt-v0.4.0.md  lovable-prompt-v0.4.1.md  lovable-prompt-v0.5.0.md  lovable-prompt-v0.5.1.md  nist-alignment-matrix-v0.5.0.md  one-pager-v0.4.0.md  one-pager-v0.4.1.md  one-pager-v0.5.0.md  one-pager-v0.5.1.md  positioning-one-pager-v0.1.md  wauth-positioning-diagram-v0.1.mmd  website-diff-notes-v0.4.1.md  website-diff-notes-v0.5.0.md  website-diff-notes-v0.5.1.md  website-diff-notes.md
examples/: agent-identity-spiffe-example.json  agent-link-example.json  attestation-spiffe-example.json  capability-token-payload-example.json  exec-budget-persistent-process-example.json  instruction-source-gist-example.json  lifecycle-rotation-event-example.json  postcondition-receipt-example.json  provenance-event-example.json  requester-context-discord-example.json  risk-signals-example.json  rp-protected-resource-metadata-example.json  rp-wauth-required-example.json  scim-agent-resource-example.json  wauth-policy-bundle-example.json  (+1 more)
sdk/: README.md  (+1 more)
sdk/wauth-py/: README.md  pyproject.toml
sdk/wauth-py/src/wauth_sdk/: __init__.py  discovery.py  envelope.py  hash.py  jcs.py  jwks_cache.py  jwt_verify.py  mcp.py  profiles.py  rp.py  schema.py
sdk/wauth-py/tests/: test_vectors.py
sdk/wauth-rs/: Cargo.toml  README.md
sdk/wauth-rs/src/: lib.rs
sdk/wauth-rs/tests/: helpers.rs  vectors.rs
(+112 files in other folders)
